@@ -2,6 +2,7 @@
 #include "LuaCore.h"
 #include "HookSystem.h"
 
+#include "../../Patches/XMLData.h"
 #include "../../Patches/ASMPatches/ASMEntityNPC.h"
 
 LUA_FUNCTION(Lua_EntityNPC_UpdateDirtColor)
@@ -302,6 +303,21 @@ LUA_FUNCTION(Lua_EntityNPC_Minecart_UpdateChild) {
 }*/
 
 
+LUA_FUNCTION(Lua_IsBossColor) {
+	Entity_NPC* npc = lua::GetUserdata<Entity_NPC*>(L, 1, lua::Metatables::ENTITY_NPC, "EntityNPC");
+	//lua_pushnumber(L, npc->_bosscoloridx);
+	std::tuple idx = { npc->_type,npc->_variant };
+	if (XMLStuff.BossColorData->bytypevar.find(idx) != XMLStuff.BossColorData->bytypevar.end()) {
+		vector<XMLAttributes> vecnodes = XMLStuff.BossColorData->childs[XMLStuff.BossColorData->bytypevar[idx]]["color"];
+		if ((npc->_subtype > 0) && (vecnodes.size() > (npc->_subtype - 1))) {
+			lua_pushboolean(L, true);
+			return 1;
+		}
+	}
+	lua_pushboolean(L, false);
+	return 1;
+}
+
 HOOK_METHOD(LuaEngine, RegisterClasses, () -> void) {
 	super();
 
@@ -325,6 +341,8 @@ HOOK_METHOD(LuaEngine, RegisterClasses, () -> void) {
 		//{ "ThrowMaggot", Lua_EntityNPC_ThrowMaggot },
 		//{ "ThrowMaggotAtPos", Lua_EntityNPC_ThrowMaggotAtPos },
 		{ "TryThrow", Lua_EntityNPC_TryThrow },
+
+		{ "IsBossColor", Lua_IsBossColor },
 		// Minecart
 		//{ "MinecartUpdateChild", Lua_EntityNPC_Minecart_UpdateChild },
 		{ NULL, NULL }
