@@ -4,6 +4,7 @@ Additions:
 	- SetModifiers
 * Added a MeetsVersion(targetversionstring) function to the REPENTOGON global
 * Added support for content on bosscolors.xml
+* Added EntityNPC:IsBossColor() to detect when a boss is a boss champion color beyond just checking for subtype
 * Added Chinese translation text, thanks @502y
 * Added support for the pocketActive param in players.xml(I forgor)
 * Added MC_PRE_PICKUP_VOIDED(EntityPickup Pickup, boolean IsBlackRune), MC_PRE_PICKUP_VOIDED_ABYSS(EntityPickup Pickup) and MC_PRE_PICKUP_COMPOSTED(EntityPickup Pickup) callbacks, returning false cancels the pickup getting consumed.
